2005-04-01 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/x11/XGDragView.m: Complete code changes to factor out as
	much as possible into the superclass and avoid duplication.

2005-03-30  Adam Fedor  <fedor@gnu.org>

	* Version 0.9.5

	* Headers/x11/XGDragView.h, Source/x11/XGDragView.m: Tag previous 
	version of file for release.
	* Source/win32/WIN32Server.m: Revert 2005-2-23 change for this release.

2005-03-29 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/x11/XGDragView.h: Make this a subclass of GSDragView
	* Source/x11/XGDragView.m: Rewrite to be a subclass of GSDragView
	so that bugfixes from it are in  XGDragView.  Remove lots of
	redundant code.  Still quite a bit to do.
	* Source/win32/WIN32Server.m: Add code to draw own window decorations
	and GSWIN32HandlesWindowDecorations user default to turn it off.
	Fixed code for detecting window at a screen point to ignore invisible
	windows (fixes crash in DnD).
	Altered window type to 'tool' for borderless windows, so that we don't
	get a button in the taskbar for every window we create.

2005-03-29  Adrian Robert <arobert@cogsci.ucsd.edu>

	* Source/art/ftfont.h, Source/art/ftfont.m, Source/art/ftfont-old.m:
	Support DPSxshow, xyshow, ashow, widthshow, and awidthshow in same
	drawString:... method that was just implementing DPSshow, and drop
	the stub that was slated to handle the former methods.
	* Source/art/ARTContext.m: Use the methods defined above.

2005-03-28 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/win32/WIN32Server.m: fix for locating window at point.

2005-03-21  Adam Fedor  <fedor@gnu.org>

	* Source/art/blit.m (artcontext_setup_draw_info): Add mail address
	to log message.

2005-02-23  Luis Cabellos

	* Source/win32/WIN32Server.m: Use new run loop api under mingw32

2005-02-22  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Rewrite, avoid setting vars unecessarily. Use
	pkg-config if possible. Switch back to xlib/winlib when other backends
	don't satisfy dependancies.